<resources>
    <string name="app_name">Tu Lavandería</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_help">Ayuda</string>
    <string name="action_signout">Salir</string>

    <string name="title_activity_registration">Registro</string>
    <string name="title_activity_restore_password">Reestablecer contraseña</string>
    <string name="title_activity_code">Código</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_new_password">Nueva contraseña</string>

    <!-->Strings objects<-->
    <string name="email">Ingresa tu correo electrónico</string>
    <string name="password">Ingresa tu contraseña</string>
    <string name="password2">Repetir tu contraseña</string>
    <string name="app_id">1024398444284361</string>
    <string name="facebook_app_name">Lavanderia</string>
    <string name="code">Código</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_fragment">Usuarios</string>
    <string name="orders_fragment">Pedidos</string>
    <string name="prices_fragment">Precios</string>
    <string name="manage_fragment">Herramientas</string>
    <string name="share_fragment">Compartir</string>
    <string name="send_fragment">Enviar</string>
    <string name="add_user_fragment">Agregar usuario</string>
    <string name="status">Estado</string>
    <string name="information">INFORMACIÓN DE USUARIO</string>
    <string name="title_activity_configuration_laundry">ConfigurationLaundry</string>
    <string name="title_activity_register_laundry">RegisterLaundry</string>
    <string name="title_activity_maps">Selecciona tu ubicación</string>

    <string-array name="arrayLaundry">
        <item>Kg</item>
        <item>Pza</item>
    </string-array>
    <string name="title_activity_login_aux">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_prices">Kilo de ropa</string>
</resources>
