<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sharychuc.lavanderia.AddUserFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow>

            <Space
                android:id="@+id/space1"
                android:layout_width="20px"
                android:layout_height="20px" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_informationSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BUSQUEDA DE USUARIO" />
        </TableRow>

        <TableRow>

            <Space
                android:id="@+id/space2"
                android:layout_width="20px"
                android:layout_height="20px" />
        </TableRow>


        <TableRow>

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:queryHint="@string/code" />
        </TableRow>

        <TableRow>

            <Space
                android:id="@+id/space3"
                android:layout_width="20px"
                android:layout_height="60px" />
        </TableRow>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorAccentDark">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
               android:background="@android:color/background_light"
                android:padding="10dp">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:id="@+id/txt_information"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/information" />
                    </TableRow>

                    <TableRow>

                        <Space
                            android:id="@+id/space4"
                            android:layout_width="20px"
                            android:layout_height="20px" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1">

                        <EditText
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="Nombre usuario" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1">

                        <EditText
                            android:id="@+id/txt_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/code" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status" />
                    </TableRow>

                </TableLayout>

            </FrameLayout>

        </FrameLayout>

        <TableRow>

        </TableRow>

    </TableLayout>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:stretchColumns="0,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/content_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0" />

            <include
                layout="@layout/content_button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />

            <include
                layout="@layout/content_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>
</FrameLayout>
